バリデーション追加

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -129,7 +129,7 @@ a {
   height: 800px;
 }
 
-.image2{
+.imagee{
   width: 300px;
   height: 75px;
 }
@@ -363,7 +363,7 @@ main{
   .card__title {
     font-size: 15px;
   }
-  .image2{
+  .imagee{
     width: 200px;
     height: 50px;
   }
