--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -132,6 +132,7 @@ a {
 .imagee{
   width: 300px;
   height: 75px;
+  background-image: image-url("IMG_2973.jpeg");
 }
 
 main{
@@ -366,6 +367,7 @@ main{
   .imagee{
     width: 200px;
     height: 50px;
+    background-image: image-url("IMG_2973.jpeg");
   }
   .comment{
     width: 300px;
