--- a/app/views/manuals/index.html.erb
+++ b/app/views/manuals/index.html.erb
@@ -4,7 +4,7 @@
 <main class="main">
   <div class="inner">
     <div class="card__wrapper">
-    <p><%= image_tag '/assets/IMG_2973.jpeg', class: 'imagee' %></p>
+    <%= image_tag '/assets/IMG_2973.jpeg', class: 'image2' %>
       <%# 部分テンプレートで投稿一覧を表示 %>
       <%= render partial: 'manual', collection: @manuals%>
     </div>
