--- a/app/views/manuals/index.html.erb
+++ b/app/views/manuals/index.html.erb
@@ -1,5 +1,5 @@
 <% unless user_signed_in? %>
-<%= image_tag 'lgi01a201311270800.jpg', class: 'image' %>
+<%# <%= image_tag 'lgi01a201311270800.jpg', class: 'image' %> 
 <% end %>
 <main class="main">
   <div class="inner">
