--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -132,7 +132,7 @@ a {
 .image2{
   width: 300px;
   height: 75px;
-  background-image: image-url("IMG_2973.jpeg");
+  background-image: image-url("IMG_2973.png");
 }
 
 main{
@@ -367,7 +367,7 @@ main{
   .image2{
     width: 200px;
     height: 50px;
-    background-image: image-url("IMG_2973.jpeg");
+    background-image: image-url("IMG_2973.png");
   }
   .comment{
     width: 300px;
