--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <div class="nav__right">
               <%= link_to "ログアウト", destroy_user_session_path,  method: :delete, class: :nav__logout %>
            <% if current_user.position_id <= 7 %>
-              <%= link_to "新規作成", new_manual_path, class: :nav__btn %>
+              <%= link_to "新規投稿", new_manual_path, class: :nav__btn %>
            <% end %>
               <%= link_to "マイページ", user_path(current_user.id), class: :nav__btn %>
             </div>
