--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,16 +7,16 @@ html,
 body,
 ul,
 li,
-h1,
 p,
 div {
   margin: 0;
   padding: 0;
 }
 
-h2 {
+h1 {
   font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN W3", sans-serif;
   color: #90ccf1;
+  text-shadow: 1px 2px 3px #094b74;
 }
 
 body {
@@ -101,8 +101,13 @@ a {
 }
 
 .field{
-  margin: 10px 0;
+  margin: 30px 0;
   text-align: center;
+}
+
+.input-default,
+.select-box{
+  width: 300px;
 }
 
 .actions{
