--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,28 @@
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <h2 class="page-heading">スタッフ新規登録</h2>
+      <h1 class="page-heading">スタッフ新規登録</h1>
 
         <%= form_with model: @user, url:  user_registration_path, local: true do |f| %>
 
         <div class="field">
           <%= f.label :name, "名前" %><br />
-          <%= f.text_field :name %>
+          <%= f.text_field :name, class:"input-default"  %>
         </div>
 
         <div class="field">
           <%= f.label :email, "メールアドレス" %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <%= f.email_field :email, class:"input-default", autofocus: true, autocomplete: "email" %>
         </div>
 
         <div class="field">
           <%= f.label :password, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.password_field :password, class:"input-default", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
           <%= f.label :password, "パスワード再入力" %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.password_field :password, class:"input-default", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
