--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -15,8 +15,8 @@ div {
 
 h1 {
   font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN W3", sans-serif;
-  color: #90ccf1;
-  text-shadow: 1px 2px 3px #094b74;
+  color: #c0d9f0;
+  text-shadow: 1px 2px 3px #4482a8;
 }
 
 body {
