--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -16,7 +16,7 @@ div {
 h1 {
   font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN W3", sans-serif;
   color: #9db7e9;
-  text-shadow: 1px 2px 3px #315e7a;
+  text-shadow: 1px 2px 3px #0c1820;
 }
 
 body {
