画像から文字に変更

--- a/app/views/manuals/index.html.erb
+++ b/app/views/manuals/index.html.erb
@@ -4,7 +4,9 @@
 <main class="main">
   <div class="inner">
     <div class="card__wrapper">
-    <%= image_tag 'IMG_2973.png', class: 'image2' %>
+    <h1 class="page-heading">
+        <%= "＊ 投稿一覧 ＊"%>
+      </h1>
       
       <%= render partial: 'manual', collection: @manuals%>
     </div>
